@@ -1,3 +1,8 @@
+2007-05-12  Paul J Stevens <paul@nfg.nl>
+
+	* dbmail-imapsession.c:
+	send EXISTS response when message count stays the same (bug #591)
+
 2007-05-11  Aaron Stone  <aaron@serendipity.cx>
 
 	* dbmail-imapsession.c:
